--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,17 @@
 body{
-    background-color: #e6e6e6;
+    background-color: #f0f0f0;
 }
 .col-xs-12{
-<<<<<<< HEAD
-    background-color: graygi;
-=======
-    background-color:#;
-}
-.w-box{
-    width:100%;
-    height:5%;
     background-color: white;
->>>>>>> 00a72c8e56036722880cc91c83ec4860e80e14ca
+}
+
+.logo {
+    margin-top: 50px;
+    height: 100px;
+}
+
+.logo-image {
+    position: relative;
+    bottom: 50px;
+    max-width: 200px;
 }
