--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Saira+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Nobile:700|Saira+Condensed');
 
 body{
     background-color: #f0f0f0;
@@ -25,6 +26,23 @@ body{
     font-family: 'Saira Condensed', sans-serif;
 }
 ul, li{
-    list-style:none;
-    display:inline-block;
+    list-style: none;
+    display: inline-block;
+   padding: 12px;
+    position: relative;
+    font-size: 18px;
+
+}
+ul{
+    padding: 0;
+
+}
+.body-heading {
+    font-size: 3.5em;
+    font-weight: bolder;
+    font-family: 'Nobile', sans-serif;
+
+}
+.row {
+    padding-bottom: 5px;
 }
