--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nobile:700|Saira+Condensed');
 
 body{
-    background-color: #f0f0f0;
+    background-color: #e6e6e6;
 }
 .w-box{
     background-color: white;
@@ -45,4 +45,12 @@ ul{
 }
 .row {
     padding-bottom: 5px;
+}
+.circle {
+    background-color: red;
+    border-radius: 50%;
+    height:200px;
+    width:200px;
+    border:5px solid white;
+
 }
