--- a/css/custom.css
+++ b/css/custom.css
@@ -44,13 +44,19 @@ ul{
 
 }
 .row {
-    padding-bottom: 5px;
+    /*padding-bottom: 5px;*/
 }
 .circle {
-    background-color: red;
     border-radius: 50%;
-    height:200px;
-    width:200px;
-    border:5px solid white;
-
+    height: 150px;
+    width: 150px;
+    border: 8px solid white;
 }
+
+.circle-1 {
+    background-color: #e6563b;
+}
+.circle-2 {
+    background-color: #df9f3d;
+}
+.
