--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Saira+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Nobile:700|Saira+Condensed');
 
@@ -30,7 +29,7 @@ body{
 ul, li{
     list-style: none;
     display: inline-block;
-   padding: 12px;
+    padding: 12px;
     font-size: 18px;
 
 }
@@ -218,14 +217,14 @@ div.col-xs-6 {
 
     }
     .row-small-pics:nth-child(3){
-       height: 25%;
+        height: 25%;
     }
     .circles-right{
-       border-radius: 20%;
+        border-radius: 20%;
     }
     .h2-text-right {
         font-size: 15px;
-     padding-right: 50px;
+        padding-right: 50px;
     }
     .quick_fix {
         width: 370px;
@@ -233,19 +232,28 @@ div.col-xs-6 {
     }
     .small-circles{
         margin: 0;
+        margin-bottom: 20px;
     }
     .circles-right {
         padding-right:0;
         padding-left: 20px;,
-         margin-right: 2px;
+    margin-right: 2px;
     }
     div.col-xs-6 {
         padding-left: 0;
     }
-div#red-small.small-circles, div#orange-small.small-circles, div#green-small.small-circles, div#turquoise-small.small-circles {
-    margin: 0 2px;
+    div#red-small.small-circles, div#orange-small.small-circles, div#green-small.small-circles, div#turquoise-small.small-circles {
+        margin: 0 2px;
+    }
+    div.col-xs-6.circles-right.hidden-xs{
+        padding-bottom: 60px;
+    }
+    img.img-response.img-border-rounded.hidden-xs{
+        padding-right:10px;
+    }
+    .line-break{
+        background-color: black;
 
+
+    }
 }
-}
-
-
