--- a/css/custom.css
+++ b/css/custom.css
@@ -337,6 +337,7 @@ div.col-xs-6 {
 
     .circles-right {
         border-radius: 20%;
+        padding-left: 10px;
 
     }
 
@@ -362,7 +363,7 @@ div.col-xs-6 {
     }
 
     .quick_fix {
-        width: 370px;
+        width: 270px;
         height: 239px;
     }
 
@@ -372,8 +373,100 @@ div.col-xs-6 {
         font-size: 3em;
 
     }
+
     .small-circles {
         width: 35px;
         height: 35px;
     }
+
+    .right {
+        position: relative;
+        float: right;
+        bottom: 10px;
+
+    }
+
+    .circles-right {
+        margin-left: 40px;
+        margin-right: 0;
+    }
+
+    div.text-center.bottom-circles {
+        margin: 40px;
+    }
+
+
+    .col-xs-6.circles-right:nth-child(4) {
+        position: relative;
+        max-width: 4px;
+
+    }
+    h2.h2-text-right {
+        font-size: 18px;
+        width: 100%;
+        display: inline-block;
+        padding-right:0;
+        padding-left: 0;
+
+    }
+    .div.col-xs-6.circles-right {
+        padding-left: 0px;
+
+    }
+
+    .md-bottom {
+        margin-bottom: 20px;
+    }
+    .md-h2-left{
+        float: left;
+    }
+    .md-h2-left-two {
+        float: right;
+    }
+    img.round-li {
+        width:30%;
+        height:30%;
+        border-radius: 10%;
+        border: 2px solid #e6e6e6;
+       padding-left: 0;
+        padding-right: 0;
+
+    }
+    round-li li {
+        padding-bottom: 20px;
+      ]
+
+    }
+    img.img-responsive.col-md-4.round-li {
+        margin-bottom: 30px;
+    }
+    h4.md-fonts {
+        font-family: 'Nobile', sans-serif;
+        font-size: 16px;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        position: relative;
+       bottom: 5px;
+
+
+    }
+    .par-tweet {
+        position: relative;
+        top: 15px;
+        font-family: 'Saira Condensed', sans-serif;
+
+    }
+    #col-margin:nth-child(1){
+        position: relative;
+        right: 180px;
+    }
+    #col-margin:first-child {
+        padding-left: 220px;
+    }
+    img.the-man {
+        width: 100%;
+        height: 200px;
+    }
+
+
 }
